--- a/rag.html
+++ b/rag.html
@@ -1,108 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>RAG Search</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RAG Chat</title>
   <style>
     body {
-      background-color: #f4f6f8;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding-top: 80px;
       margin: 0;
-    }
-
-    .container {
-      background: #ffffff;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      width: 90%;
-      max-width: 700px;
-    }
-
-    h1 {
-      margin-top: 0;
-      font-size: 2em;
-      color: #333;
-      text-align: center;
-    }
-
-    form {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f5f7fa;
       display: flex;
       flex-direction: column;
-      gap: 12px;
-      margin-top: 20px;
+      height: 100vh;
     }
 
-    input[type="text"],
-    select,
-    button {
-      padding: 12px;
+    header {
+      text-align: center;
+      padding: 20px 0;
+      background-color: #fff;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+      color: #333;
+    }
+
+    .chat-container {
+      flex: 1;
+      padding: 20px;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .message {
+      max-width: 70%;
+      padding: 15px 20px;
+      border-radius: 20px;
+      line-height: 1.4;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    }
+
+    .user {
+      align-self: flex-end;
+      background-color: #007BFF;
+      color: white;
+    }
+
+    .bot {
+      align-self: flex-start;
+      background-color: #ffffff;
+      color: #333;
+    }
+
+    .input-area {
+      display: flex;
+      padding: 15px;
+      background-color: #fff;
+      border-top: 1px solid #ddd;
+    }
+
+    .input-area input {
+      flex: 1;
+      padding: 10px 15px;
       font-size: 1em;
       border: 1px solid #ccc;
       border-radius: 8px;
       outline: none;
     }
 
-    button {
+    .input-area button {
+      margin-left: 10px;
+      padding: 10px 20px;
       background-color: #007BFF;
       color: white;
       border: none;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    #answer {
-      margin-top: 30px;
-      font-size: 1.1em;
-      background: #f9f9f9;
-      padding: 20px;
-      border-left: 5px solid #007BFF;
       border-radius: 8px;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    .input-area button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>RAG Assistant</h1>
-    <form id="ragForm">
-      <input type="text" id="query" placeholder="Ask a question..." required />
-      <select id="dataset">
-        <option value="medical">medical</option>
-        <option value="legal">legal</option>
-        <option value="custom">custom</option>
-      </select>
-      <button type="submit">Generate Answer</button>
-    </form>
-    <div id="answer"></div>
+
+  <header>
+    <h1>RAG Chat Interface</h1>
+  </header>
+
+  <div class="chat-container" id="chatContainer">
+    <!-- Messages will be dynamically inserted here -->
+  </div>
+
+  <div class="input-area">
+    <input type="text" id="userInput" placeholder="Type your question..." />
+    <button onclick="sendMessage()">Send</button>
   </div>
 
   <script>
-    document.getElementById("ragForm").addEventListener("submit", async function (e) {
-      e.preventDefault();
+    async function sendMessage() {
+      const input = document.getElementById("userInput");
+      const text = input.value.trim();
+      if (!text) return;
 
-      const query = document.getElementById("query").value;
-      const dataset = document.getElementById("dataset").value;
+      addMessage("user", text);
+      input.value = "";
 
       const formData = new FormData();
-      formData.append("query", query);
-      formData.append("dataset", dataset);
+      formData.append("query", text);
+      formData.append("dataset", "default");  // optional
 
-      const response = await fetch("http://localhost:8000/rag", {
-        method: "POST",
-        body: formData
-      });
+      try {
+        const response = await fetch("http://localhost:8003/rag", {
+          method: "POST",
+          body: formData
+        });
 
-      const data = await response.json();
-      document.getElementById("answer").innerText = data.answer;
-    });
+        const data = await response.json();
+        addMessage("bot", data.answer || "No answer returned.");
+      } catch (err) {
+        addMessage("bot", "❌ Failed to fetch answer.");
+      }
+    }
+
+    function addMessage(sender, text) {
+      const container = document.getElementById("chatContainer");
+      const message = document.createElement("div");
+      message.className = `message ${sender}`;
+      message.textContent = text;
+      container.appendChild(message);
+      container.scrollTop = container.scrollHeight;
+    }
   </script>
+
 </body>
 </html>
