--- a/query_suggestion.html
+++ b/query_suggestion.html
@@ -130,9 +130,9 @@
         <input type="text" id="query" name="query" placeholder="Enter your query" />
         <div id="suggestions" class="suggestions" hidden></div>
       </div>
-      <select id="algorithm" name="algorithm">
-        <option value="tfidf">TF-IDF</option>
-        <option value="bm25">BM25</option>
+      <select id="dataset" name="dataset">
+        <option value="antique">antique</option>
+        <option value="quora">quora</option>
       </select>
       <button type="submit">Search</button>
     </form>
