--- a/embedding_search.html
+++ b/embedding_search.html
@@ -96,9 +96,9 @@
     <h1>Simple IR Search</h1>
     <form id="searchForm">
       <input type="text" id="query" name="query" placeholder="Enter your query" />
-      <select id="algorithm" name="algorithm">
-        <option value="tfidf">TF-IDF</option>
-        <option value="bm25">BM25</option>
+      <select id="dataset" name="dataset">
+        <option value="antique">antique</option>
+        <option value="quora">quora</option>
       </select>
       <button type="submit">Search</button>
     </form>
